# golden-rs

./: Cargo.toml  README.md
src/: actor.rs  lib.rs  main.rs
src/dkg/: ciphered_share.rs
src/dkg/participant/: mod.rs
